# kode_fra_undervisning_tests_linting

./: .pre-commit-config.yaml  pyproject.toml
src/mymath/: __init__.py  mymath.py
src/tests/: test_mymath.py
