[project]
name = "mymath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "clbokea", email = "clbo@kea.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
